fix hairline Collapse`s border-width

--- a/src/Collapse/Collapse.styl
+++ b/src/Collapse/Collapse.styl
@@ -15,7 +15,7 @@
   background-color: #fff;
 
   > .{$prefix}-collapse-item {
-    border-top: 1px solid $normal-alpha-7;
+    hairline: border-top $normal-alpha-7;
 
     > .{$prefix}-collapse-header {
       height: 56px;
@@ -62,9 +62,9 @@
 
     .{$prefix}-collapse-content {
       overflow: hidden;
-      border-top: 1px solid $normal-alpha-7;
       color: #666;
       background-color: #fff;
+      hairline: border-top $normal-alpha-7;
 
       &-box {
         color: $dark-alpha-3;
